--- a/pageweb/MenuPrésentation.html
+++ b/pageweb/MenuPrésentation.html
@@ -64,7 +64,7 @@
           <a target="" href="../Photo/Photo Presentation/CV_pdf.pdf">
             <img src="../Photo/Photo Presentation/CV.png" alt="CV" width="600" height="400">
           </a>
-          <div class="desc">Mon          CV</div>
+          <div class="desc">Mon CV</div>
         </div>
     </div>
 
@@ -73,7 +73,7 @@
           <a target="" href="../Photo/Photo Presentation/Diagramme_Image.svg">
             <img src="../Photo/Photo Presentation/organigramme.png" alt="Diagramme" width="600" height="400">
           </a>
-          <div class="desc">Diagramme de navigation</div>
+          <div class="desc">Navigation</div>
         </div>
     </div>
 
