--- a/index.html
+++ b/index.html
@@ -52,42 +52,44 @@
 
 <Div class="containerbody">
     <div class="containercarousel">
-        <div id="carouselaccueil" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselaccueil" class="carousel slide" data-bs-ride="true">
             <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselaccueil" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselaccueil" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselaccueil" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="3500">
-                    <img src="./Photo/Photo_Acceuil/photo_accueil/1.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item" data-bs-interval="1500">
-                    <img src="./Photo/Photo_Acceuil/photo_accueil/2.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item" data-bs-interval="1500">
-                    <img src="./Photo/Photo_Acceuil/photo_accueil/3.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item active" data-bs-interval="1500">
-                    <img src="./Photo/Photo_Acceuil/photo_accueil/4.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item" data-bs-interval="1500">
-                    <img src="./Photo/Photo_Acceuil/photo_accueil/5.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item" data-bs-interval="1500">
-                    <img src="./Photo/Photo_Acceuil/photo_accueil/6.jpg" class="d-block w-100" alt="...">
-                </div>
+              <button type="button" data-bs-target="#carouselaccueil" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselaccueil" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselaccueil" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselaccueil" data-bs-slide-to="3" aria-label="Slide 4"></button>
+              <button type="button" data-bs-target="#carouselaccueil" data-bs-slide-to="4" aria-label="Slide 5"></button>
+              <button type="button" data-bs-target="#carouselaccueil" data-bs-slide-to="5" aria-label="Slide 6"></button>
             </div>
-
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="2000">
+                <img src="./Photo/Photo_Acceuil/photo_accueil/1.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item" data-bs-interval="1500">
+                <img src="./Photo/Photo_Acceuil/photo_accueil/2.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item" data-bs-interval="1500">
+                <img src="./Photo/Photo_Acceuil/photo_accueil/3.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item" data-bs-interval="1500">
+                <img src="./Photo/Photo_Acceuil/photo_accueil/4.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item" data-bs-interval="1500">
+                <img src="./Photo/Photo_Acceuil/photo_accueil/5.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item" data-bs-interval="1500">
+                <img src="./Photo/Photo_Acceuil/photo_accueil/6.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselaccueil" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#carouselaccueil" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
             </button>
-        </div>
+          </div>
     </div>
 
     <div class="containerpresentation">
