Ajout tp tableau

--- a/pageweb/codage_tp_tableau.html
+++ b/pageweb/codage_tp_tableau.html
@@ -53,7 +53,7 @@
     <div class="responsive">
         <div class="gallery">
           <a target="" href="./Codage/TP_CSS_Tableau/index.html">
-            <img src="../Photo/Photo Codage/maxdesign_site.jpg" alt="Eval Labyrinthe" width="600" height="400">
+            <img src="../Photo/Photo Codage/tp_tableau.jpg" alt="Eval Labyrinthe" width="600" height="400">
           </a>
           <div class="desc">Lien vers site web</div>
         </div>
