--- a/pageweb/codage_tp_grid.html
+++ b/pageweb/codage_tp_grid.html
@@ -52,7 +52,7 @@
     <div class="responsive">
         <div class="gallery">
           <a target="" href="https://www.digitalocean.com/community/tutorials/css-css-grid-holy-grail-layout">
-            <img src="../Photo/Photo Codage/grid_site.jpg" alt="Eval Labyrinthe" width="600" height="400">
+            <img src="../Photo/Photo Codage/grid_site.jpg" alt="TP Grid" width="600" height="400">
           </a>
           <div class="desc">Apprendre Grid</div>
         </div>
@@ -61,13 +61,20 @@
     <div class="responsive">
         <div class="gallery">
           <a target="" href="https://developer.mozilla.org/fr/docs/Web/CSS/CSS_Grid_Layout/Line-based_Placement_with_CSS_Grid">
-            <img src="../Photo/Photo Codage/grid_Mdn_site.jpg" alt="Eval Labyrinthe" width="600" height="400">
+            <img src="../Photo/Photo Codage/grid_Mdn_site.jpg" alt="TP Grid" width="600" height="400">
           </a>
           <div class="desc">Pratiquer Grid</div>
         </div>
     </div>
 
-
+    <div class="responsive">
+        <div class="gallery">
+          <a target="" href="./Codage/TP_Grid/index.html">
+            <img src="../Photo/Photo Codage/tp_grid.jpg" alt="TP Grid" width="600" height="400">
+          </a>
+          <div class="desc">Pratiquer Grid</div>
+        </div>
+    </div>
 
 
 </Div>
